Adding Spring security configuration, adding unit tests, adding java doc